force-app/main/default/objects/GAP_Service_Data__c/GAP_Service_Data__c.object-meta.xml
<CustomObject>
    <description>[P2] I-Fresh 매출채권 분석용</description>
    <label>GAP 기능 데이터</label>
    <nameField>
        <displayFormat>Sql-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>