force-app/main/default/objects/GAP_Service_Data__c/fields/ASIS_Sql__c.field-meta.xml
<CustomField>
    <fullName>ASIS_Sql__c</fullName>
    <label>Sql</label>
    <referenceTo>GAP_Data__c</referenceTo>
    <relationshipName>ASIS_SQL</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>