force-app/main/default/objects/GAP_Service_Data__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>ASIS 서비스</label>
    <referenceTo>GAP_Service__c</referenceTo>
    <relationshipName>ASIS_SQL</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>