force-app/main/default/objects/GAP_Service_Data__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <label>순서</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>